@@ -4,6 +4,10 @@ AS OF SVN REV. 5091, WE ARE NOW USING TRUNK.  ALL UNTESTED BUGFIXES/FEATURES GO 
 IF YOU HAVE A WORKING AND TESTED BUGFIX PUT IT INTO STABLE AS WELL AS TRUNK.
 
 2007/04/03
+	* Corrected the attack_attr_none check being backwards (ie: this config was
+	  working backwards!)
+	* All pets can now move regardless of their Mob counter part setting.
+	  [Skotlex]
 	* Some source code cleaning
 	- Fixed the badly worded messages during mapserver startup
 	- Cleaned up socket config reading
